--- a/src/screens/CreateMovie.css
+++ b/src/screens/CreateMovie.css
@@ -30,3 +30,8 @@
 .submit-button:hover {
   background-color: var(--success-bg);
 }
+
+.disabled {
+  background-color: red !important;
+  cursor: not-allowed;
+}
