--- a/src/components/Review.css
+++ b/src/components/Review.css
@@ -1,6 +1,6 @@
 .review-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   margin-top: 1rem;
 }
 
@@ -82,6 +82,13 @@
   background-color: var(--primaryBackground);
   margin-bottom: 1.5rem;
   box-sizing: border-box;
+}
+
+.review-button-container {
+  height: auto;
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.8rem;
 }
 
 .submit-review-button {
