--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -92,7 +92,7 @@
 
 .edit-button:hover,
 .delete-button:hover {
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: var(--primaryHover);
 }
 
 .movie-card-rating {
@@ -120,6 +120,6 @@
   }
 
   .movie-card-actions {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
 }
