--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,34 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.logout-container {
+  display: flex;
+  width: 95%;
+  margin-top: 2%;
+  justify-content: space-between;
+}
+
+.back-arrow {
+  background: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  cursor: pointer;
+  color: var(--text);
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  transition: color 0.3s ease;
+}
+
+.back-arrow:hover {
+  color: var(--primary);
+}
+
+.logout-btn {
+  height: fit-content;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
