--- a/src/components/CustomInput/CustomInput.css
+++ b/src/components/CustomInput/CustomInput.css
@@ -11,7 +11,8 @@
   color: var(--text-color);
 }
 
-.custom-input input, .custom-input textarea {
+.custom-input input,
+.custom-input textarea {
   display: block;
   font-size: medium;
   width: 60%;
@@ -22,16 +23,20 @@
   margin: 0 auto;
   background-color: var(--primary-background);
   color: var(--text-color);
-  transition: border-color 0.3s, box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
 }
 
-.custom-input input:focus, .custom-input textarea:focus {
+.custom-input input:focus,
+.custom-input textarea:focus {
   border-color: var(--primary-color);
   outline: none;
   box-shadow: 0 0 8px rgba(0, 123, 255, 0.6);
 }
 
-.custom-input input.invalid, .custom-input textarea.invalid {
+.custom-input input.invalid,
+.custom-input textarea.invalid {
   border-color: red !important;
 }
 
