--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -55,7 +55,8 @@
   margin-top: 2rem;
 }
 
-.login-btn, .logout-btn {
+.login-btn,
+.logout-btn {
   background-color: var(--primary);
   color: #000;
   padding: 0.5rem 1rem;
